--- a/src/Components/Category-Item/Category-item.styles.scss
+++ b/src/Components/Category-Item/Category-item.styles.scss
@@ -61,8 +61,10 @@
     }
 
     p {
-      font-weight: lighter;
+      font-weight: 700;
       font-size: 16px;
+      text-transform: uppercase;
     }
   }
 }
+
